fixed overflow of the image

--- a/src/styles/NewPost.module.css
+++ b/src/styles/NewPost.module.css
@@ -154,10 +154,9 @@
 .expander svg{transform: rotate(180deg);}
 .expander.expanded svg{transform: rotate(0deg);}
 .expand{padding: 14px 16px;}
-.image{max-height: 100%;}
+.image{max-height: 100%; display: flex;}
 .image img{
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
-    max-height: 100%;
 }
